--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
         "vue-template-compiler": "^2.6.12"
     },
-    "dependencies": {}
+    "dependencies": {
+        "progressbar.js": "^1.1.0"
+    }
 }
